# clip-stash

./: .gitignore  Cargo.toml  README.md  data.db
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: maintenance.rs  time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  password.rs  posted.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: api.rs  ctx.rs  form.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
