[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.32", features = ["serde"] }
derive_more = "0.99.17"
serde = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
