[package]
name = "clipstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clipstash"
path = "src/lib/mod.rs"

[dependencies]
chrono = { version = "0.4.32", features = ["serde"] }
derive_more = "0.99.17"
handlebars = { version = "5.1.1", features = ["dir_source"] }
rand = "0.8.5"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
thiserror = "1.0.56"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
